--- a/app.css
+++ b/app.css
@@ -1,26 +1,38 @@
+body {
+	font-family: 'Righteous', cursive;
+}
+
 td {
 	border-radius: 50%;
 }
+
 tr {
 	border: 1px solid black;
 }
+
 table {
 	border: 1px solid black;
 }
+
 .container {
 	display: inline-block;
 	width: 80%;
 	height: 100vh;
+	margin-top: 20px;
 }
 
 #leftColumn {
-	font-family: 'Righteous', cursive;
 	font-size: 2rem;
 	display: inline-block;
 	width: 18%;
 	text-align: center;
 	vertical-align: top;
 	margin-top: 20px;
+}
+
+#selectBoard {
+	font-size: 1.5rem;
+	font-weight: 100;
 }
 
 .playerOneFont {
@@ -67,9 +79,11 @@ table {
 .playerRed {
 	background-color: red;
 }
+
 .playerBlue {
 	background-color: blue;
 }
+
 .playerHead2 {
 	width: 100%;
 	height: 100%;
@@ -84,7 +98,7 @@ table {
 	border-radius: 50%;
 	background-color: red;
 	margin: 0 auto;
-	animation-name: slidein;
+	animation-name: drop;
 	animation-duration: 200ms;
 	animation-direction: alternate;
 }
@@ -95,12 +109,12 @@ table {
 	border-radius: 50%;
 	background-color: blue;
 	margin: 0 auto;
-	animation-name: slidein;
+	animation-name: drop;
 	animation-duration: 200ms;
 	animation-direction: alternate;
 }
 
-@keyframes slidein {
+@keyframes drop {
 	from {
 		margin-top: -800%;
 	}
